manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: number-guess-service
spec:
  type: NodePort
  selector:
    app: number-guess
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
