manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: number-guess-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/akash"
        backend:
          service:
            name: number-guess-service
            port:
              number: 80
